Bug 1262887 - Long URLs stored in history cause slow address bar. r=adw

MozReview-Commit-ID: 8h2nVKBe6tP

--HG--
extra : rebase_source : 1ab6f2d5a9bfdf04dabafdbb825e95d2fe95e5a8